Fix: Clipped Tabs - Show close button exclude pinned #45

--- a/userChrome.css
+++ b/userChrome.css
@@ -341,7 +341,7 @@
     padding-inline-start: 8px !important;
   }
 
-  #tabbrowser-tabs[closebuttons="activetab"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-content > .tab-close-button:not([selected="true"]) {
+  #tabbrowser-tabs[closebuttons="activetab"] > #tabbrowser-arrowscrollbox > .tabbrowser-tab:not([pinned]) > .tab-stack > .tab-content > .tab-close-button:not([selected="true"]) {
     display: -moz-inline-box !important;
   }
 
